--- a/templates/docker-compose.yml.j2
+++ b/templates/docker-compose.yml.j2
@@ -7,15 +7,11 @@ services:
   # docker run --rm --cap-add=IPC_LOCK --ulimit memlock=-1:-1 --ulimit nofile=65536:65536 -t -P --memory="4g" -e "discovery.zen.minimum_master_nodes=${ES_NODE_COUNT}" -v esdata:/usr/share/elasticsearch/data docker.elastic.co/elasticsearch/elasticsearch:5.0.0-rc1
     build:
       context: build/elasticsearch
-      args:
-        ELASTIC_VERSION: "${ELASTIC_VERSION}"
-        ES_DOWNLOAD_URL: "${ES_DOWNLOAD_URL}"
-        ES_JAVA_OPTS: "${ES_JAVA_OPTS}"
     cap_add:
       - IPC_LOCK
     environment:
       - discovery.zen.minimum_master_nodes=${ES_NODE_COUNT}
-    image: "${VERSIONED_IMAGE}"
+    image: {{ versioned_image }}
     mem_limit: 4g
     networks:
       esnet:
@@ -34,16 +30,12 @@ services:
   elasticsearch2:
     build:
       context: build/elasticsearch
-      args:
-        ELASTIC_VERSION: "${ELASTIC_VERSION}"
-        ES_DOWNLOAD_URL: "${ES_DOWNLOAD_URL}"
-        ES_JAVA_OPTS: "${ES_JAVA_OPTS}"
     cap_add:
       - IPC_LOCK
     environment:
       - discovery.zen.ping.unicast.hosts=elasticsearch1
       - discovery.zen.minimum_master_nodes=${ES_NODE_COUNT}
-    image: "${VERSIONED_IMAGE}"
+    image: {{ versioned_image }}
     mem_limit: 4g
     networks:
       - esnet
