Make elasticsearch2 a data (non-master) node
This change the removes the need to configure minimum master nodes
differently depending on whether one or two containers were started.

Because that logic was previously handled in the Makefile, it was
necessary to handle all docker-compose actions via make. It's now
possible to invoke `docker-compose up` directly, without having to go
through make or set environment variables.

--- a/templates/docker-compose.yml.j2
+++ b/templates/docker-compose.yml.j2
@@ -4,13 +4,11 @@ services:
   # Can't use service elasticsearch=<num> for now due to named volumes
   elasticsearch1:
   # Equivalent to:
-  # docker run --rm --cap-add=IPC_LOCK --ulimit memlock=-1:-1 --ulimit nofile=65536:65536 -t -P --memory="4g" -e "discovery.zen.minimum_master_nodes=${ES_NODE_COUNT}" -v esdata:/usr/share/elasticsearch/data {{ versioned_image }}
+  # docker run --rm --cap-add=IPC_LOCK --ulimit memlock=-1:-1 --ulimit nofile=65536:65536 -t -P --memory="4g" -v esdata:/usr/share/elasticsearch/data {{ versioned_image }}
     build:
       context: build/elasticsearch
     cap_add:
       - IPC_LOCK
-    environment:
-      - discovery.zen.minimum_master_nodes=${ES_NODE_COUNT}
     image: {{ versioned_image }}
     mem_limit: 4g
     networks:
@@ -34,7 +32,7 @@ services:
       - IPC_LOCK
     environment:
       - discovery.zen.ping.unicast.hosts=elasticsearch1
-      - discovery.zen.minimum_master_nodes=${ES_NODE_COUNT}
+      - node.master=false
     image: {{ versioned_image }}
     mem_limit: 4g
     networks:
