--- a/templates/docker-compose.yml.j2
+++ b/templates/docker-compose.yml.j2
@@ -1,4 +1,5 @@
 ---
+# This file was generated from the template at templates/docker-compose.yml.j2
 version: '2'
 services:
   # Can't use service elasticsearch=<num> for now due to named volumes
