--- a/templates/Dockerfile.j2
+++ b/templates/Dockerfile.j2
@@ -10,7 +10,7 @@
 
 
 FROM centos:7
-MAINTAINER Elastic Docker Team <docker@elastic.co>
+LABEL maintainer "Elastic Docker Team <docker@elastic.co>"
 
 ENV PATH /usr/share/elasticsearch/bin:$PATH
 ENV JAVA_HOME /usr/lib/jvm/java-1.8-openjdk
