--- a/templates/Dockerfile.j2
+++ b/templates/Dockerfile.j2
@@ -14,7 +14,7 @@ FROM centos:7
 LABEL maintainer "Elastic Docker Team <docker@elastic.co>"
 
 ENV PATH /usr/share/elasticsearch/bin:$PATH
-ENV JAVA_HOME /usr/lib/jvm/java-1.8-openjdk
+ENV JAVA_HOME /usr/lib/jvm/jre-1.8.0-openjdk
 
 RUN yum install -y java-1.8.0-openjdk-headless wget which && yum clean all
 
