--- a/templates/docker-compose.yml.j2
+++ b/templates/docker-compose.yml.j2
@@ -5,13 +5,11 @@ services:
   # Can't use service elasticsearch=<num> for now due to named volumes
   elasticsearch1:
     container_name: elasticsearch1
-  # Equivalent to:
-  # docker run --rm --cap-add=IPC_LOCK --ulimit memlock=-1:-1 --ulimit nofile=65536:65536 -t -P --memory="4g" -v esdata:/usr/share/elasticsearch/data {{ versioned_image }}
     build:
       context: build/elasticsearch
     cap_add:
       - IPC_LOCK
-    image: {{ versioned_image }}
+    image: docker.elastic.co/elasticsearch/elasticsearch:{{ version_tag }}
     mem_limit: 4g
     networks:
       esnet:
@@ -36,7 +34,7 @@ services:
     environment:
       - discovery.zen.ping.unicast.hosts=elasticsearch1
       - node.master=false
-    image: {{ versioned_image }}
+    image: docker.elastic.co/elasticsearch/elasticsearch:{{ version_tag }}
     mem_limit: 4g
     networks:
       - esnet
