Support building nightly snapshots

--- a/templates/Dockerfile.j2
+++ b/templates/Dockerfile.j2
@@ -1,13 +1,16 @@
 # This Dockerfile was generated from templates/Dockerfile.j2
 {% set plugin_list = 'x-pack ingest-user-agent ingest-geoip' %}
-{% if staging_build_num -%}
-{%   set version_tag = elastic_version + '-' + staging_build_num -%}
-{%   set url_root = 'http://staging.elastic.co/%s/downloads/elasticsearch' % version_tag -%}
+{% set version_tag = elastic_version -%}
+{% set tarball = 'elasticsearch-%s.tar.gz' % elastic_version -%}
+
+{% if elastic_version.endswith('-SNAPSHOT') -%}
+{%   set url_root = 'https://snapshots.elastic.co/downloads/elasticsearch' -%}
+{% elif staging_build_num -%}
+{%   set version_tag = version_tag + '-' + staging_build_num -%}
+{%   set url_root = 'https://staging.elastic.co/%s/downloads/elasticsearch' % version_tag -%}
 {% else -%}
-{%   set version_tag = elastic_version -%}
 {%   set url_root = 'https://artifacts.elastic.co/downloads/elasticsearch' -%}
 {% endif -%}
-{% set tarball = 'elasticsearch-%s.tar.gz' % elastic_version -%}
 
 
 FROM centos:7
