Support release builds under release-manager

--- a/templates/Dockerfile.j2
+++ b/templates/Dockerfile.j2
@@ -3,10 +3,14 @@
 {% set version_tag = elastic_version -%}
 {% set tarball = 'elasticsearch-%s.tar.gz' % elastic_version -%}
 
-{% if release_manager and elastic_version.endswith('-SNAPSHOT')-%}
+{% if release_manager and elastic_version.endswith('-SNAPSHOT') -%}
 {%   set url_root = 'http://localhost/build/snapshot-artifacts/elasticsearch/distribution/tar/build/distributions' -%}
 {%   set x_pack_url_root = 'http://localhost/build/snapshot-artifacts/x-pack-elasticsearch/plugin/build/distributions' -%}
 {%   set plugin_url_root = 'http://localhost/build/snapshot-artifacts/elasticsearch/plugins/$PLUGIN/build/distributions' -%}
+{% elif release_manager -%}
+{%   set url_root = 'http://localhost/build/release-artifacts/elasticsearch/distribution/tar/build/distributions' -%}
+{%   set x_pack_url_root = 'http://localhost/build/release-artifacts/x-pack-elasticsearch/plugin/build/distributions' -%}
+{%   set plugin_url_root = 'http://localhost/build/release-artifacts/elasticsearch/plugins/$PLUGIN/build/distributions' -%}
 {% elif staging_build_num -%}
 {%   set version_tag = version_tag + '-' + staging_build_num -%}
 {%   set url_root = 'https://staging.elastic.co/%s/downloads/elasticsearch' % version_tag -%}
