Use the standard curl silent mode flags
To avoid unnecessary eye strain from red colored output with the
progress bar. That won't let us see if there are slowness issues while
downloading artifacts, but anyway we are heading towards fully
automated builds through the release-manager.

--- a/templates/Dockerfile.j2
+++ b/templates/Dockerfile.j2
@@ -34,7 +34,7 @@ WORKDIR /usr/share/elasticsearch
 USER elasticsearch
 
 # Download and extract defined ES version.
-RUN curl -L {{ url_root }}/{{ tarball }} | \
+RUN curl -fsSL {{ url_root }}/{{ tarball }} | \
     tar zx --strip-components=1
 
 RUN set -ex && for esdirs in config data logs; do \
