Make comment consistent with the ones from other templates.

--- a/templates/Dockerfile.j2
+++ b/templates/Dockerfile.j2
@@ -1,4 +1,4 @@
-# This Dockerfile was generated from templates/Dockerfile.j2
+# This Dockerfile was generated from the template at templates/Dockerfile.j2
 {% set ingest_plugins = 'ingest-user-agent ingest-geoip' %}
 {% set version_tag = elastic_version -%}
 {% set tarball = 'elasticsearch-%s.tar.gz' % elastic_version -%}
