Move image flavor to repository, not tag
The release manager is built with the expectation that the version tag
of any Docker image will contain strictly the ELASTIC_VERSION. When we
overload the version tag with the image flavour, we break that
expectation.

This patch moves the image flavour from the tag to the repository, so
instead of getting image names like:

  elasticsearch:6.0.0-beta2-platinum

You get ones like:

  elasticsearch-platinum:6.0.0-beta2

--- a/templates/Dockerfile.j2
+++ b/templates/Dockerfile.j2
@@ -82,11 +82,10 @@ RUN chown elasticsearch:elasticsearch \
     chmod 0750 bin/es-docker
 {% elif image_flavor == 'basic' -%}
 COPY elasticsearch.yml log4j2.properties config/
+RUN echo 'xpack.license.self_generated.type: basic' >>config/elasticsearch.yml; \
+    echo 'xpack.security.enabled: false' >>config/elasticsearch.yml
 COPY x-pack/log4j2.properties config/x-pack/
 COPY bin/es-docker bin/es-docker
-
-# Note: basic will be available after 6.0.0-beta1
-RUN echo 'xpack.license.self_generated.type: basic' >>config/elasticsearch.yml
 
 RUN chown elasticsearch:elasticsearch \
       config/elasticsearch.yml \
