--- a/templates/Dockerfile.j2
+++ b/templates/Dockerfile.j2
@@ -18,7 +18,7 @@
 {%   set url_root = 'https://artifacts.elastic.co/downloads/elasticsearch' -%}
 {% endif -%}
 
-FROM centos:7
+FROM docker.elastic.co/elasticsearch/centos-base:7.3-jvm141
 LABEL maintainer "Elastic Docker Team <docker@elastic.co>"
 
 ENV ELASTIC_CONTAINER true
