Use centos:7 base preinstalled with openjdk 1.8b141
There has been observations of Linux kernel OOM killing java processes
when using the latest openjdk-1.8.0 b144, available in
centos:7.4 and other RHEL based distros. Until this is properly
troubleshooted, use a centos:7 base that has openjdk 1.8.0 b141
preinstalled and excluded from yum updates.

Relates #117

--- a/templates/Dockerfile.j2
+++ b/templates/Dockerfile.j2
@@ -16,7 +16,9 @@
 {%   set url_root = 'https://artifacts.elastic.co/downloads/elasticsearch' -%}
 {% endif -%}
 
-FROM centos:7
+{# Use a centos base that has openjdk-1.8.0.b141 pre-installed and excluded from yum.conf,
+until potential issues with build 144 have been troubleshooted #}
+FROM docker.elastic.co/elasticsearch/centos-base:7.3-jvm141
 LABEL maintainer "Elastic Docker Team <docker@elastic.co>"
 
 ENV ELASTIC_CONTAINER true
