--- a/templates/Dockerfile.j2
+++ b/templates/Dockerfile.j2
@@ -84,8 +84,7 @@ RUN chown elasticsearch:elasticsearch \
     chmod 0750 bin/es-docker
 {% elif image_flavor == 'basic' -%}
 COPY elasticsearch.yml log4j2.properties config/
-RUN echo 'xpack.license.self_generated.type: basic' >>config/elasticsearch.yml; \
-    echo 'xpack.security.enabled: false' >>config/elasticsearch.yml
+RUN echo 'xpack.license.self_generated.type: basic' >>config/elasticsearch.yml
 COPY x-pack/log4j2.properties config/x-pack/
 COPY bin/es-docker bin/es-docker
 
